--- a/dev/scss/_typography.scss
+++ b/dev/scss/_typography.scss
@@ -19,6 +19,24 @@ p {
 	margin-top: 0;
 }
 
+blockquote p {
+  font-family: $Serif;
+  font-weight: 300;
+  font-size: 28px;
+  margin-left: -1.75px;
+  line-height: 1.48;
+  letter-spacing: -.014em;
+  color: $Color02;
+  cite {
+    &::before{
+      content: ' (';
+    }
+    &::after{
+      content: ').';
+    }
+  }
+}
+
 a {
   text-decoration: none;
   color: inherit;
