--- a/dev/scss/application.scss
+++ b/dev/scss/application.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'header';
+@import 'typography';
 
 * {
 	-webkit-transition: all 0.2s ease;
@@ -12,7 +13,6 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
 
 .container {
 	max-width: 700px;
