--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 /*
 Theme Name: Amalfi
-Theme URI: http://wordpress.org/themes/twentythirteen
-Author: the WordPress team
-Author URI: http://wordpress.org/
-Description: The story behind each project is what matters. The process you went through. Conflicts you resolved, or didn't. New ideas that you tried.
+Author: Leandro Incetta
+Description: A simplified minimal blogging theme.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: black, brown, orange, tan, white, yellow, light, one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
+Tags: helvetica, georgia
 Text Domain: amalfi
 
 This theme, like WordPress, is licensed under the GPL.
