--- a/dev/scss/_typography.scss
+++ b/dev/scss/_typography.scss
@@ -1,3 +1,5 @@
+// TYPE
+
 h1,
 h2,
 h3,
@@ -5,18 +7,93 @@ h4,
 h5,
 h6 {
   font-family: $SansSerif;
+  & a {
+  	color: inherit;
+  	text-decoration: none;
+  	border-bottom: none;
+  }
 }
 
-p {
+h1 {
+	font-weight: 700;
+	font-style: normal;
+	font-size: 36px;
+	line-height: 1.15;
+	letter-spacing: -0.02em;
+}
+
+.heading-first {
+	font-weight: 700;
+	font-style: normal;
+	font-size: 33px;
+	line-height: 1.15;
+	letter-spacing: -0.02em;
+	margin-bottom: 3em;
+	margin-top: 0;
+}
+
+h2,
+.heading-first small {
+	font-family: $SansSerif;
+	letter-spacing: -0.02em;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 25px;
+	line-height: 1.22;
+	letter-spacing: -0.022em;
+	margin-top: 58px;
+}
+
+.heading-first small {
+  color: $Color02;
+}
+
+h2,
+h3 {
+  font-weight: 400;
+}
+
+p, ul, li {
 	font-family: $Serif;
 	letter-spacing: .01rem;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 21px;
+	font-size: 18px;
 	line-height: 1.58;
 	letter-spacing: -0.003em;
 	color: $Color01;
 	margin-top: 0;
+	& a {
+		text-decoration: none;
+		border-bottom: 1px solid #dcdcdc;
+		color: $ColorLink;
+		&:hover {
+			border-bottom: 1px solid $ColorLink;
+		}
+	}
+}
+
+header a,
+footer a {
+	color: inherit;
+  	text-decoration: none;
+  	border-bottom: none;
+  	&:hover {
+  		border-bottom: none;
+  	}
+}
+
+pre {
+	font-family: $Code;
+	background: $Color01;
+	color: #fff;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 14px;
+	line-height: 1.58;
+	letter-spacing: -0.003em;
+	overflow-x: auto;
+	padding: 18px;
 }
 
 blockquote p {
@@ -43,14 +120,6 @@ a {
   &:hover {
   	text-decoration: underline;
   }
-}
-
-h1 {
-	font-weight: 700;
-	font-style: normal;
-	font-size: 36px;
-	line-height: 1.15;
-	letter-spacing: -0.02em;
 }
 
 // Display date
