--- a/dev/scss/_typography.scss
+++ b/dev/scss/_typography.scss
@@ -51,6 +51,8 @@ h2,
 	letter-spacing: -0.022em;
 }
 
+// Related posts
+
 #jp-relatedposts h3.jp-relatedposts-headline em:before {
   border-top: 2px solid rgba(0,0,0,.2);
 }
@@ -62,6 +64,8 @@ h2,
 #jp-relatedposts .jp-relatedposts-items .jp-relatedposts-post .jp-relatedposts-post-title a {
   font-weight: 700;
 }
+
+//
 
 .heading-first small {
   color: $Color02;
