--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -1,6 +1,7 @@
 // Font families
 
-$SansSerif: "Avenir", "Helvetica Neue","Helvetica","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","メイリオ","Meiryo","ＭＳ Ｐゴシック",arial,sans-serif;
+// $SansSerif: "Avenir", "Helvetica Neue","Helvetica","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","メイリオ","Meiryo","ＭＳ Ｐゴシック",arial,sans-serif;
+$SansSerif: "San Francisco", -apple-system, system-ui, ".SFNSText-Regular", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $Serif: "Ultra",Georgia,Cambria,"Times New Roman",Times,serif;
 $Code: Consolas,monaco,monospace;
 
